--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Portafolio Ainhoa</title>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
