--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-    <title>Portafolio Ainhoa</title>
+    <title>Portfolio Ainhoa</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
 </head>
