--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Portfolio Ainhoa</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
