--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
     <title>Portfolio Ainhoa</title>
@@ -16,7 +15,6 @@
 </head>
 
 <body>
-    <!--===== HEADER =====-->
     <header class="header">
         <nav class="nav bd-grid">
             <div class="menu_nav" id="nav-menu">
@@ -137,7 +135,6 @@
                                     alt="Logo Docker" /></div>
                             <div class="imagenes_slide"><img src="assets/img/herramientas/nginx.png" alt="Logo NGINX" />
                             </div>
-                            <!-- <div class="imagenes_slide"><img src="assets/img/herramientas/nginx.webp" alt="Logo NGINX" /></div> -->
                         </div>
                     </div>
                 </div>
@@ -204,10 +201,6 @@
                                 </p>
                             </div>
                             <div class="video_wrapper">
-                                <!-- <iframe width="560" height="315" src="https://youtube.com/embed/m0MM3YWhnxM"
-                            title="Chillgig" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe> -->
                                 <video class="proyectos_video" autoplay muted loop>
                                     <source src="assets/videos/chillgig.mp4" type="video/mp4">
                                 </video>
@@ -260,15 +253,12 @@
                 </section>
     </main>
 
-    <!--===== FOOTER =====-->
     <footer class="footer">
-        <p class="footer_titulo">&#169; Portafolio Ainhoa Blanco.</p>
+        <p class="footer_titulo">&#169; Portfolio Ainhoa Blanco.</p>
     </footer>
 
-    <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!--===== MAIN JS =====-->
     <script src="assets/js/main.js"></script>
 </body>
 
